# iq_pipeline

./: CMakeLists.txt
include/: queue.h
src/: consumer.cpp  main.cpp  producer.cpp
tests/: queue_test.cpp
